update imports & dependencies

--- a/notebooks/step_2.ipynb
+++ b/notebooks/step_2.ipynb
@@ -2,23 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9475927c-4f9a-4fa9-b9b4-991a22a8d063",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dlib, cv2, os\n",
+    "import cv2, os\n",
     "from ast import literal_eval\n",
     "from imutils import face_utils\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import time\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4786db98-5a41-47e0-9874-b044ebde6625",
    "metadata": {},
    "source": [
     "## Load csv files which contain head bounding box & key point coordinates\n",
@@ -28,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "582228d9-1c7c-4dd6-a68c-09414ab5b201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62894118-949d-4e7c-acd1-aaf8891fa094",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92c0fca-0952-4e42-bd5a-ffb355cbd1c0",
    "metadata": {},
    "source": [
     "Head bounding boxes and key points could only be detected for 40k out of the 65k train images."
@@ -88,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "17b1f46e-e0e3-4e42-9590-8aa99ac79b38",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +119,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba30aed-2b19-4b61-b2d8-385484403a1f",
    "metadata": {},
    "source": [
     "Head bounding boxes and key points could only be detected for 3.5k out of the 5k validation images."
@@ -134,7 +126,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b83d639-00c3-4987-a761-f74d9ce2ee89",
    "metadata": {},
    "source": [
     "## Filter out bad images and refine crops\n",
@@ -158,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a7c46cb0-ee56-4ca9-a855-3a7392ad6a11",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "651e2845-6113-490f-a935-6f94b368a316",
    "metadata": {},
    "outputs": [
     {
