--- a/notebooks/step_3.ipynb
+++ b/notebooks/step_3.ipynb
@@ -2,25 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b1ed8090-76c2-431c-8440-46f167fc0f0b",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os, random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import time\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import random\n",
     "from shutil import copyfile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68432b1d-8b7f-496a-8a84-0762ab50ce7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122b3b15-661c-4ab9-9067-7043c334f9f2",
    "metadata": {},
    "outputs": [],
    "source": [
