--- a/notebooks/step_1.ipynb
+++ b/notebooks/step_1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ecca41d-3ef1-4e45-bd94-0e0f66228875",
    "metadata": {},
    "source": [
     "## What does this notebook do?\n",
@@ -11,8 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee452c0b-0732-4356-afc6-36c1e06c952b",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +18,28 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "import xml.etree.ElementTree as ET\n",
-    "import os"
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d7623d34-cced-40ec-813b-102b5dbf0d1e",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_file_list_path = Path(\"/scratch/local/ssd/janhr/data/tsinghua_dogs_high_res_original/TrainAndValList/train.lst\")\n",
+    "val_file_list_path = Path(\"/scratch/local/ssd/janhr/data/tsinghua_dogs_high_res_original/TrainAndValList/validation.lst\")\n",
+    "annotation_path = Path(\"/scratch/local/ssd/janhr/data/tsinghua_dogs_high_res_original//High-Annotations/\")\n",
+    "source_path = Path(\"/scratch/local/ssd/janhr/data/tsinghua_dogs_high_res_original/high-resolution\")\n",
+    "destination_path = Path(\"/scratch/local/ssd/janhr/data/tsinghua_dogs_high_res_cropped/all\")\n",
+    "\n",
+    "destination_path.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,71 +59,90 @@
     "    \n",
     "    for i,f in enumerate(file_list):\n",
     "        try:\n",
-    "            img_path = f\n",
-    "            a = annotation_path + img_path + \".xml\"\n",
+    "            img_name = f.name\n",
+    "            parent_folder_name = f.parent.relative_to(f.parent.parent)\n",
+    "            a = annotation_path / parent_folder_name / (img_name + \".xml\")\n",
     "            tree = ET.parse(a)\n",
     "            root = tree.getroot()\n",
     "            bbox=bounding_box(root)\n",
-    "            im=Image.open(os.path.join(source_path,img_path))\n",
-    "            im=im.crop(bbox)\n",
-    "            dest_im_path = destination_path + str(i) + \".jpg\"\n",
-    "            im.save(dest_im_path)\n",
+    "            im=Image.open(f)\n",
+    "            rgb_im = im.convert('RGB')\n",
+    "            rgb_im = rgb_im.crop(bbox)\n",
+    "            dest_im_path = destination_path / img_name\n",
+    "            rgb_im.save(dest_im_path)\n",
     "        except Exception as e: \n",
     "            print(e)\n",
     "            \n",
-    "        if (i % 5000) == 0:\n",
-    "            print(i)"
+    "        print(f\"{i}/{len(file_list)}\", end=\"\\r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 65228 images.\n",
+      "65227/65228\r"
+     ]
+    }
+   ],
+   "source": [
+    "with open(train_file_list_path) as file:\n",
+    "    train_file_list = list(file)\n",
+    "\n",
+    "train_files = []\n",
+    "for i in train_file_list:\n",
+    "    s = i.split(\".//\")[1]\n",
+    "    t = s.split(\"\\n\")[0]\n",
+    "    t = source_path / t\n",
+    "    train_files.append(t)\n",
+    "    \n",
+    "print(f\"Found {len(train_files)} images.\")\n",
+    "    \n",
+    "process_files(train_files, source_path, destination_path, annotation_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5200 images.\n",
+      "5199/5200\r"
+     ]
+    }
+   ],
+   "source": [
+    "with open(val_file_list_path) as file:\n",
+    "    val_file_list = list(file)\n",
+    "\n",
+    "val_files = []\n",
+    "for i in val_file_list:\n",
+    "    s = i.split(\".//\")[1]\n",
+    "    t = s.split(\"\\n\")[0]\n",
+    "    t = Path(t)\n",
+    "    t = source_path / t\n",
+    "    val_files.append(t)\n",
+    "    \n",
+    "print(f\"Found {len(val_files)} images.\")\n",
+    "    \n",
+    "process_files(val_files, source_path, destination_path, annotation_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a62a3c1-4bcf-4b5f-959f-9d2bac6e670d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# train\n",
-    "train_file_list_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/TrainAndValList/train.lst\"\n",
-    "source_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/high-resolution/\"\n",
-    "destination_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res_cropped/train/\"\n",
-    "annotation_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/High-Annotations/\"\n",
-    "\n",
-    "with open('/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/TrainAndValList/train.lst') as file:\n",
-    "    file_list = list(file)\n",
-    "\n",
-    "train_file_list = []\n",
-    "for i in file_list:\n",
-    "    s = i.split(\".//\")[1]\n",
-    "    t = s.split(\"\\n\")[0]\n",
-    "    train_file_list.append(t)\n",
-    "\n",
-    "process_files(train_file_list, source_path, destination_path, annotation_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68062d8a-7ce4-44e0-9746-1ae3ade7e4fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# validation\n",
-    "val_file_list_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/TrainAndValList/validation.lst\"\n",
-    "source_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/high-resolution/\"\n",
-    "destination_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res_cropped/val/\"\n",
-    "annotation_path = \"/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/High-Annotations/\"\n",
-    "\n",
-    "with open('/scratch/shared/beegfs/janhr/data/unsup3d_extended/tsinghua_dogs_high_res/TrainAndValList/train.lst') as file:\n",
-    "    file_list = list(file)\n",
-    "\n",
-    "train_file_list = []\n",
-    "for i in file_list:\n",
-    "    s = i.split(\".//\")[1]\n",
-    "    t = s.split(\"\\n\")[0]\n",
-    "    train_file_list.append(t)\n",
-    "\n",
-    "process_files(val_file_list, source_path, destination_path, annotation_path)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
