--- a/notebooks/step_3.ipynb
+++ b/notebooks/step_3.ipynb
@@ -16,21 +16,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22930 images were found!\n"
+     ]
+    }
+   ],
    "source": [
-    "cropped_imgs_path = \"/scratch/local/ssd/janhr/data/dogs_cropped/all/\"\n",
-    "train_dir_path = \"/scratch/local/ssd/janhr/data/dogs_cropped/train\"\n",
-    "val_dir_path = \"/scratch/local/ssd/janhr/data/dogs_cropped/val\"\n",
+    "cropped_imgs_path = Path(\"/scratch/local/ssd/janhr/data/dogs_cropped/all\")\n",
+    "train_dir_path = Path(\"/scratch/local/ssd/janhr/data/dogs_cropped/train\")\n",
+    "val_dir_path = Path(\"/scratch/local/ssd/janhr/data/dogs_cropped/val\")\n",
     "train_validation_ratio = 0.1\n",
-    "\n",
-    "img_names = os.listdir(cropped_imgs_path)\n",
-    "print(f\"{len(img_names)} images were found!\")\n",
     "\n",
     "# Create train and val dir\n",
     "Path(train_dir_path).mkdir(parents=True, exist_ok=True)\n",
-    "Path(val_dir_path).mkdir(parents=True, exist_ok=True)"
+    "Path(val_dir_path).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "img_names = os.listdir(str(cropped_imgs_path))\n",
+    "print(f\"{len(img_names)} images were found!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_samples = random.sample(range(1, len(img_names)), int(train_validation_ratio*len(img_names)))\n",
+    "\n",
+    "for i,v in enumerate(img_names):\n",
+    "    src = str(cropped_imgs_path / v)\n",
+    "    if i in validation_samples:\n",
+    "        dst = str(val_dir_path / v)\n",
+    "        copyfile(src, dst)\n",
+    "    else:\n",
+    "        dst = str(train_dir_path / v)\n",
+    "        copyfile(src, dst)"
    ]
   },
   {
@@ -38,20 +64,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "validation_samples = random.sample(range(1, len(img_names)), int(train_validation_ratio*len(img_names)))\n",
-    "\n",
-    "for i,v in enumerate(img_names):\n",
-    "    src = cropped_imgs_path + v\n",
-    "    if i in validation_samples:\n",
-    "        dst = val_dir_path + v\n",
-    "        copyfile(src, dst)\n",
-    "        # move to val folder\n",
-    "    else:\n",
-    "        # copy to train folder\n",
-    "        dst = train_dir_path + v\n",
-    "        copyfile(src, dst)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
